# wavelet-research

./: .gitignore  .gitmodules  README.md  __init__.py  emotiv_channel_locs.py  export_model.py  hello.py  pyproject.toml  train.py  tune_model.py
config/: eeg_mmi_montagenet_cfg.yaml  eeg_mmi_train_cfg.yaml  eyes_montagenet_cfg.yaml  eyes_train_cfg.yaml  libribrain_montagenet_cfg.yaml  libribrain_train_cfg.yaml  mmi_montagenet_cfg.yaml  mmi_train_cfg.yaml  montagenet_cfg.yaml  train_cfg.yaml
misc/: count_params.py  download_data.py  filter_stream.py  inspect_data.py  shape_lab.py  sin_test.py
src/: __init__.py  eeggpt.py  mongtagenet.py  montagenet.py  telepath.py
src/components/: __init__.py  attention.py  focal_loss.py  rope.py
utils/: data_utils.py  electrode_utils.py  metrics.py  torch_datasets.py  train_utils.py
utils/data/: __init__.py  common.py  eeg_eye_net.py  eeg_mmi.py  emotiv_alpha.py  lemon_rest.py  libribrain_speech.py  main.py  neurotechs.py  resting_methods.py  things_100ms.py
