[project]
name = "wavelet-research"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "aiohttp>=3.12.0",
    "ipython>=8.36.0",
    "mne>=1.9.0",
    "numpy>=2.2.6",
    "osfclient>=0.0.5",
    "torch>=2.7.0",
]

[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[tool.setuptools]
packages = ["src"]
