[project]
name = "wavelet-research"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "aiohttp>=3.12.0",
    "einops>=0.8.1",
    "ipython>=8.36.0",
    "loguru>=0.7.3",
    "mne>=1.9.0",
    "numpy>=2.2.6",
    "numpy-stl>=3.2.0",
    "osfclient>=0.0.5",
    "plotly>=6.1.2",
    "pnpl>=0.0.4",
    "pytorch-memlab>=0.3.0",
    "rotary-embedding-torch>=0.8.6",
    "scikit-learn>=1.7.1",
    "stl>=0.0.3",
    "torch>=2.7.0",
    "wandb>=0.19.11",
]

[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[tool.setuptools]
packages = ["src"]
